fix(engine): evaluate path from jvm prop